--- a/tmall_index.html
+++ b/tmall_index.html
@@ -243,6 +243,11 @@
 						<div class="brand-slide-content">
 							<div class="brand-slide-bg" index="1">
 								<p>
+									<a href=""><img src="images/3-1.jpg"></a>
+									<a href=""><img src="images/3-2.jpg"></a>
+									<a href=""><img src="images/3-3.jpg"></a>
+								</p>
+								<p>
 									<a href=""><img src="images/1-1.jpg"></a>
 									<a href=""><img src="images/1-2.jpg"></a>
 									<a href=""><img src="images/1-3.jpg"></a>
@@ -256,6 +261,11 @@
 									<a href=""><img src="images/3-1.jpg"></a>
 									<a href=""><img src="images/3-2.jpg"></a>
 									<a href=""><img src="images/3-3.jpg"></a>
+								</p>
+								<p>
+									<a href=""><img src="images/1-1.jpg"></a>
+									<a href=""><img src="images/1-2.jpg"></a>
+									<a href=""><img src="images/1-3.jpg"></a>
 								</p>
 							</div>
 						</div>
