transition的回调函数

--- a/tmall_index.html
+++ b/tmall_index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=utf-8">
-	<script src="assets/js/jquery.min.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.tmall.index.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.lazyload.min.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery.tmall.index.js"></script>
+	<script type="text/javascript" src="js/jquery.lazyload.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/tmall-stylesheet.css">
 	<title>Tmall 天猫</title>
 </head>
