--- a/tmall_index.html
+++ b/tmall_index.html
@@ -241,13 +241,8 @@
 						<a class="floor-show-middle-arrow arrow-left"  title="上一个幻灯片"></a>
 						<a  class="floor-show-middle-arrow  arrow-right"   title="下一个幻灯片"></a>
 						<div class="brand-slide-content">
-							<div class="brand-slide-bg" index="1">
-								<p>
-									<a href=""><img src="images/3-1.jpg"></a>
-									<a href=""><img src="images/3-2.jpg"></a>
-									<a href=""><img src="images/3-3.jpg"></a>
-								</p>
-								<p>
+							<div class="brand-slide-bg" is-animating="false">
+								<p class="page-current">
 									<a href=""><img src="images/1-1.jpg"></a>
 									<a href=""><img src="images/1-2.jpg"></a>
 									<a href=""><img src="images/1-3.jpg"></a>
@@ -262,10 +257,53 @@
 									<a href=""><img src="images/3-2.jpg"></a>
 									<a href=""><img src="images/3-3.jpg"></a>
 								</p>
-								<p>
+							</div>
+						</div>
+					</div>
+					<div class="floor-show-bottom">
+						<img src="images/meizhuang.jpg">
+					</div>
+				</div>
+				<div class="floor-show-second">
+					<img src="images/shoes.jpg">
+				</div>
+				<div class="floor-show-third">
+					<ul>
+						<li class="row1"><img src="images/pic1.jpg"></li>
+						<li class="row1"><img src="images/pic2.jpg"></li>
+						<li class="row1"><img src="images/pic3.jpg"></li>
+						<li class="row2"><img src="images/pic4.jpg"></li>
+						<li class="row2"><img src="images/pic5.jpg"></li>
+						<li class="row2"><img src="images/pic6.jpg"></li>
+					</ul>
+				</div>
+			</div>
+			<div class="floor">
+				<div class="floor-show-first">
+					<ul class="floor-show-top">
+						<li>美妆</li>
+						<li>|</li>
+						<li>护肤</li>
+					</ul>
+					<div class="floor-show-middle">
+						<a class="floor-show-middle-arrow arrow-left"  title="上一个幻灯片"></a>
+						<a  class="floor-show-middle-arrow  arrow-right"   title="下一个幻灯片"></a>
+						<div class="brand-slide-content">
+							<div class="brand-slide-bg" is-animating="false">
+								<p class="page-current">
 									<a href=""><img src="images/1-1.jpg"></a>
 									<a href=""><img src="images/1-2.jpg"></a>
 									<a href=""><img src="images/1-3.jpg"></a>
+								</p>
+								<p>
+									<a href=""><img src="images/2-1.jpg"></a>
+									<a href=""><img src="images/2-2.jpg"></a>
+									<a href=""><img src="images/2-3.jpg"></a>
+								</p>
+								<p>
+									<a href=""><img src="images/3-1.jpg"></a>
+									<a href=""><img src="images/3-2.jpg"></a>
+									<a href=""><img src="images/3-3.jpg"></a>
 								</p>
 							</div>
 						</div>
